--- a/Spotify/style/login.css
+++ b/Spotify/style/login.css
@@ -1,85 +1,3 @@
-/* body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-}
-
-.container {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 300px;
-}
-
-.tabs {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
-}
-
-.tab-button {
-    background-color: #1db954;
-    color: #fff;
-    border: none;
-    padding: 10px;
-    cursor: pointer;
-    width: 48%;
-    border-radius: 4px;
-}
-
-.tab-button:hover {
-    background-color: #1ed760;
-}
-
-.tab-content {
-    display: none;
-}
-
-.tab-content.active {
-    display: block;
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-}
-
-label {
-    margin-bottom: 5px;
-}
-
-input {
-    margin-bottom: 10px;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-button {
-    background-color: #1db954;
-    color: #fff;
-    border: none;
-    padding: 10px;
-    cursor: pointer;
-    border-radius: 4px;
-}
-
-button:hover {
-    background-color: #1ed760;
-}
-
-.error-message {
-    color: red;
-    margin-bottom: 10px;
-}
-*/
-
-/* General Styles */
 body {
     font-family: Arial, Helvetica, sans-serif;
     background: linear-gradient(180deg, #1db954, #191414);
@@ -140,7 +58,8 @@ label {
 input[type="text"],
 input[type="password"],
 input[type="email"],
-input[type="date"] {
+input[type="date"],
+#options {
     width: 93%;
     padding: 10px;
     margin-bottom: 15px;
@@ -150,7 +69,12 @@ input[type="date"] {
     color: #fff;
 }
 
+#options {
+    width: 100%;
+}
+
 button[type="submit"] {
+    margin-top: 10px;
     width: 100%;
     padding: 10px;
     border: none;
