--- a/Spotify/style/home.css
+++ b/Spotify/style/home.css
@@ -1,5 +1,3 @@
-/* style/home.css */
-
 * {
     margin: 0;
     padding: 0;
@@ -12,6 +10,13 @@ body {
     color: #ffffff;
     display: flex;
     height: 100vh;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
 }
 
 .container {
