--- a/Spotify/style/favsong.css
+++ b/Spotify/style/favsong.css
@@ -7,7 +7,7 @@ button {
     border-radius: 5px;
 }
 
-.unfollowBtn {
+.removeFavBtn {
     margin-left: 10px;
 }
 
@@ -45,6 +45,6 @@ td {
     display: none;
 }
 
-#followersList {
+#songsList {
     margin-top: 30px;
 }
