--- a/Spotify/style/favsong.css
+++ b/Spotify/style/favsong.css
@@ -1,50 +1,130 @@
-button {
-    background-color: #1db954;
-    color: #ffffff;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    border-radius: 5px;
+/* h2 {
+    border-bottom: 1px solid #333;
+    padding-bottom: 10px;
 }
 
-.removeFavBtn {
+.song-item {
+    background-color: #282828;
+    margin: 10px 0;
+    padding: 15px;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+}
+
+.song-item h3 {
+    margin: 0 0 10px 0;
+}
+
+.song-controls {
+    display: flex;
+    align-items: center;
+}
+
+.song-controls .start,
+.song-controls .end {
+    width: 50px;
+    text-align: center;
+}
+
+.song-controls .music-time {
+    flex-grow: 1;
+}
+
+.song-controls .play-btn {
+    cursor: pointer;
     margin-left: 10px;
 }
 
-ul {
-    list-style-type: none;
+.song-controls .fa-trash {
+    cursor: pointer;
+    margin-left: 10px;
+} */
+
+button {
+    margin-top: 30px;
+    padding: 15px;
+    font-size: 18px;
+    color: #FFFFFF;
+    background-color: #1DB954;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
 }
 
 button:hover {
-    background-color: #14833b;
-}
-
-.content h2 {
-    margin-top: 50px;
-}
-
-table {
-    width: 100%;
-    margin-top: 20px;
-    border-collapse: collapse;
-}
-
-table,
-th,
-td {
-    border: 1px solid #1db954;
-}
-
-th,
-td {
-    padding: 10px;
-    text-align: left;
-}
-
-.hidden {
-    display: none;
+    background-color: #1AA34A;
 }
 
 #songsList {
-    margin-top: 30px;
+    margin-top: 40px;
+}
+
+.song-item {
+    background-color: #282828;
+    padding: 20px;
+    border-radius: 8px;
+    margin-bottom: 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    transition: transform 0.2s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.song-item:hover {
+    transform: translateY(-5px);
+}
+
+.song-item h3 {
+    padding-bottom: 7px;
+    font-size: 24px;
+    color: #1DB954;
+}
+
+.song-controls {
+    display: flex;
+    align-items: center;
+}
+
+i {
+    font-size: 1.1em;
+    margin: 3px 10px;
+    color: #FFFFFF;
+    cursor: pointer;
+}
+
+audio {
+    display: none;
+}
+
+input[type="range"] {
+    width: 200px;
+    height: 2px;
+    appearance: none;
+    background-color: rgba(255, 255, 255, 0.2);
+    cursor: pointer;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+    appearance: none;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: white;
+}
+
+.start,
+.end {
+    padding: 0 10px;
+}
+
+.play-btn,
+.delete-btn {
+    cursor: pointer;
+}
+
+.play-btn:hover,
+.delete-btn:hover {
+    color: #1DB954;
 }
