--- a/Spotify/style/mysongs.css
+++ b/Spotify/style/mysongs.css
@@ -1,6 +1,7 @@
 button {
-    padding: 10px;
-    font-size: 15px;
+    margin-top: 30px;
+    padding: 15px;
+    font-size: 18px;
     color: #FFFFFF;
     background-color: #1DB954;
     border: none;
@@ -13,7 +14,7 @@ button:hover {
 }
 
 #songsList {
-    margin-top: 50px;
+    margin-top: 40px;
 }
 
 .song-item {
@@ -24,7 +25,8 @@ button:hover {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     transition: transform 0.2s;
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .song-item:hover {
@@ -40,10 +42,6 @@ button:hover {
 .song-controls {
     display: flex;
     align-items: center;
-}
-
-.song-controls-btn {
-    margin-left: 5px;
 }
 
 #btns i {
@@ -84,38 +82,4 @@ input[type="range"]::-webkit-slider-thumb {
 
 .play-btn:hover {
     color: #1DB954;
-}
-
-.comment-section {
-    margin-top: 20px;
-}
-
-.comment-section input,
-.comment-section textarea {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: none;
-    border-radius: 4px;
-}
-
-.comment-section button {
-    width: 100%;
-    padding: 10px;
-    background-color: #1DB954;
-    color: #FFFFFF;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.comment-section button:hover {
-    background-color: #1AA34A;
-}
-
-.comment {
-    background-color: #333333;
-    padding: 10px;
-    border-radius: 4px;
-    margin-top: 10px;
 }
