--- a/Spotify/style/buypremium.css
+++ b/Spotify/style/buypremium.css
@@ -3,7 +3,7 @@
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     overflow: hidden;
-    width: 300px;
+    width: 600px;
     color: white;
     text-align: center;
     margin-top: 100px;
@@ -22,6 +22,9 @@
 
 .card-body {
     padding: 20px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .card-body h2 {
