--- a/Spotify/style/albums.css
+++ b/Spotify/style/albums.css
@@ -7,6 +7,10 @@
     transition: background-color 0.3s;
 }
 
+.search-container {
+    margin-bottom: 50px;
+}
+
 .album-item:hover {
     background-color: #333;
 }
