--- a/Spotify/style/songs.css
+++ b/Spotify/style/songs.css
@@ -12,6 +12,11 @@ button:hover {
     background-color: #1AA34A;
 }
 
+#searchInput {
+    padding: 9px;
+    border-radius: 5px;
+}
+
 #songsList {
     margin-top: 50px;
 }
